Excluded the function call to the error builder from the stack trace.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/devo-ps/build-http-error",
   "dependencies": {},
   "devDependencies": {
+    "debug": "latest",
     "gulp": "latest",
     "gulp-coffee": "latest",
     "gulp-coffeelint": "latest",
